<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/face_imageView"
        android:layout_width="@dimen/face_thumbnail_size"
        android:layout_height="@dimen/face_thumbnail_size"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/empty_photo" />
    <EditText
        android:id="@+id/face_name"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/name"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/family_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/family" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>